# Vulcan

./: .clang-format  .gitignore  LICENSE  LICENSE.md  Makefile  README  README.md  SConstruct  bootstrap.sh  check_pcan.py  demo_script.sh  install.sh  lcm-offline  log_exploration_data  log_lpm  log_mpepc_data  log_sensor_and_mpepc_data  log_sensor_data  log_social_norms_data  meson.build  meson_options.txt  produce_changelog  restart_can.sh  setenv.sh  start_all_sensors  start_bbb3_exploration  start_debug_ui  start_eecs3_exploration  start_local_metric_hssh  start_localtopo  start_mpepc  start_mpepc_fetch  start_object_tracker  start_sensors  start_state_estimator  start_vulcan_camera  upload_daily_log
src/: Doxyfile  SConscript  code_style_requirements.tex  lines  meson.build
src/calibration/: SConscript  meson.build
src/config/: SConscript  meson.build
src/core/: SConscript  angle_functions.h  conversions.cpp  conversions.h  drive_wheel.cpp  drive_wheel.h  float_comparison.h  image.cpp  image.h  imu_data.cpp  imu_data.h  laser_scan.cpp  laser_scan.h  line.h  matrix.h  meson.build  motion_state.h  multivariate_gaussian.cpp  multivariate_gaussian.h  odometry.cpp  odometry.h  point.h  point_util.h  pose.cpp  pose.h  pose_distribution.cpp  pose_distribution.h  position.h  vector.h  velocity.cpp  velocity.h
src/graph/: astar_impl.h  edge.h  edge_ordered_graph.h  graph.h  path.h  planarity.cpp  planarity.h  search.h  vertex.h
src/hssh/: SConscript  location.h  meson.build  types.h
src/laser/: SConscript  correlative_scan_matcher.cpp  correlative_scan_matcher.h  estimate_laser_noise.cpp  laser_io.cpp  laser_io.h  laser_io_test.cpp  laser_line_extractor.cpp  laser_line_extractor.h  laser_scan_lines.h  line_extraction.cpp  line_extraction.h  line_extractor_params.cpp  line_extractor_params.h  meson.build  moving_laser_scan.h  reflected_laser_scan.h  scan_likelihood_grid.cpp  scan_likelihood_grid.h  scan_matcher_params.cpp  scan_matcher_params.h
src/lcmtypes/: .gitignore  SConscript  lcm_types.h  meson.build  message_helpers.cpp  message_helpers.h  subscription_manager.h
src/logging/: SConscript  meson.build
src/math/: SConscript  angle_range.cpp  angle_range.h  beta_distribution.cpp  beta_distribution.h  boundary.cpp  boundary.h  clustering.h  coordinates.h  covariance.h  dbscan.cpp  derivatives.cpp  derivatives.h  discrete_gaussian.cpp  discrete_gaussian.h  em.cpp  exponential_distribution.cpp  exponential_distribution.h  filters.h  gamma_distribution.cpp  gamma_distribution.h  interpolation.cpp  interpolation.h  kmeans.cpp  mahalanobis.cpp  mahalanobis.h  mathfwd.h  meson.build  moments.h  moments_features.h  point3d.h  ransac.cpp  ransac.h  regression.cpp  regression.h  roots.h  savitzky_golay.cpp  savitzky_golay.h  smoothed_derivative_sequence.h  softmax.cpp  (+20 more)
src/mpepc/: SConscript  meson.build  types.h
src/planner/: SConscript  meson.build
src/robot/: SConscript  commands.h  director.cpp  director.h  elevator.h  invacare_atm.cpp  invacare_atm.h  invacare_atm_parameter_estimator.cpp  main.cpp  meson.build  motion_checker.cpp  motion_checker.h  motion_command_filter.cpp  motion_command_filter.h  odometry_producer.cfg  params.cpp  params.h  proximity_checker.cpp  proximity_checker.h  proximity_warning_indices.h  quantum_6000.cpp  quantum_6000.h  quantum_6000_parameter_estimator.cpp  quantum_6000_test.cpp  safe_stop_checker.cpp  safe_stop_checker.h  stop_test_results.cpp  wheelchair.cpp  wheelchair.h  wheelchair_controller_test.cpp
src/sensors/: 85-hokuyo_vulcan.rules  SConscript  avt_camera.cpp  avt_camera.h  avt_camera_parameters.cpp  avt_camera_parameters.h  camera.h  get_hokuyo_id.cpp  hokuyo_urg_laser.cpp  hokuyo_urg_laser.h  image_producer.cpp  imu.h  imu_data_producer.cpp  laser_rangefinder.h  laser_scan_producer.cpp  meson.build  microstrain_3dmgx2.cpp  microstrain_3dmgx2.h  microstrain_3dmgx3.cpp  microstrain_3dmgx3.h  motion_sensors_to_text.cpp  odometry_estimator.cpp  odometry_estimator.h  odometry_producer.cpp  phidget_encoder_board.cpp  phidget_encoder_board.h  remote_encoders.cpp  remote_encoders.h  sensor_log.cpp  sensor_log.h  wheel_encoders.cpp  wheel_encoders.h  wheel_encoders_params.cpp  wheel_encoders_params.h
src/simulator/: SConscript  main.cpp  robot_group.cpp  robot_group.h  robot_new.cfg  robot_object.cpp  robot_object.h  simulator_params.cfg  simulator_params.cpp  simulator_params.h  simulator_utils.cpp  simulator_utils.h
src/system/: SConscript  common.h  debug_communicator.h  director.h  heartbeat.h  meson.build  message_traits.h  module.h  module_communicator.cpp  module_communicator.h  module_generator.py  serialized_t.hpp  system_communicator.h
src/tracker/: SConscript  director.cpp  director.h  dynamic_object.h  dynamic_object_collection.h  dynamic_object_visitor.h  goal.h  goal_predictor.cpp  goal_predictor.h  laser_object.cpp  laser_object.h  laser_object_collection.h  main.cpp  meson.build  notes.txt  object_boundary.cpp  object_boundary.h  object_detector.cpp  object_detector.h  object_motion.cpp  object_motion.h  object_state.h  object_tracker.cpp  object_tracker.h  plot_tracker_meas.plt  plot_tracker_positions.plt  ppp_notes.txt  tracking_environment.h  types.h
src/ui/: SConscript  meson.build
src/utils/: SConscript  algorithm_ext.h  auto_mutex.h  binary_heap.h  boosting.cpp  boosting.h  bucketed_binary_heap.h  byte_conversion.cpp  byte_conversion.h  canbus.cpp  canbus.h  cell_grid-extern-impl.cpp  cell_grid.h  cell_grid_utils.h  command_line.cpp  command_line.h  compression.h  condition_variable.cpp  condition_variable.h  config_file.cpp  config_file.h  config_file_utils.cpp  config_file_utils.h  config_file_writer.cpp  config_file_writer.h  counting_sort.h  cyclic_iterator.h  decision_stump.cpp  decision_stump.h  discretized_angle_grid.cpp  discretized_angle_grid.h  disjoint_set_forest.cpp  disjoint_set_forest.h  edit_distance.cpp  edit_distance.h  enum_operators.h  feature_vector.cpp  feature_vector.h  fixed_duration_buffer.h  float_io.h  (+54 more)
src/vision/: SConscript  color_conversion.cpp  color_conversion.h  (+25 more)
(+1493 files in other folders)
