subdir('lcmtypes')

subdir('core')
subdir('math')
subdir('utils')
subdir('system')
subdir('robot')
subdir('sensors')
subdir('laser')
subdir('vision')
subdir('hssh')
subdir('tracker')
subdir('mpepc')
subdir('planner')
subdir('calibration')
subdir('logging')
#subdir('simulator')
subdir('ui')
subdir('config')
