utils_src = [
    'boosting.cpp',
    'byte_conversion.cpp',
    'canbus.cpp',
    'cell_grid-extern-impl.cpp',
    'command_line.cpp',
    'condition_variable.cpp',
    'config_file.cpp',
    'config_file_utils.cpp',
    'config_file_writer.cpp',
    'decision_stump.cpp',
    'discretized_angle_grid.cpp',
    'disjoint_set_forest.cpp',
    'edit_distance.cpp',
    'feature_vector.cpp',
    'histogram_2d.cpp',
    'histogram.cpp',
    'hough_transform.cpp',
    'icp.cpp',
    'isovist.cpp',
    'liblinear.cpp',
    'mutex.cpp',
    'plot2d.cpp',
    'pose_trace.cpp',
    'sensor_time.cpp',
    'serial.cpp',
    'svm.cpp',
    'tagged_file.cpp',
    'thread.cpp',
    'timestamp.cpp',
    'visibility_graph.cpp',
    'visibility_graph_feature.cpp',
]

utils_lib = static_library(
    'vulcan_utils',
    utils_src,
    include_directories : vulcan_inc,
    link_with : [core_lib, math_lib],
    dependencies : [arma_dep, boost_dep],
)

subdir('tests')
