dbscan_test = executable(
    'dbscan-test',
    'dbscan_test.cpp',
    include_directories : vulcan_inc,
    link_with : [math_lib],
    dependencies : [gtest_dep],
)

zernike_test = executable(
    'zernike-test',
    'zernike_test.cpp',
    include_directories : vulcan_inc,
    link_with : [math_lib],
)
