ui_components_src = [
    'area_extent_renderer.cpp',
    'area_graph_renderer.cpp',
    'area_subgraph_renderer.cpp',
    'cell_grid_renderer.cpp',
    'corner_renderer.cpp',
    'cost_map_renderer.cpp',
    'decision_plan_renderer.cpp',
    'dynamic_object_renderer.cpp',
    'exploration_map_renderer.cpp',
    'frontiers_renderer.cpp',
    'gateways_renderer.cpp',
    'glass_map_renderer.cpp',
    'global_topo_map_previewer.cpp',
    'gradient_grid_renderer.cpp',
    'graph_view_topological_map_renderer.cpp',
    'grid_based_display_widget.cpp',
    'hypothesis_tree_renderer.cpp',
    'image_renderer.cpp',
    'image_segment_renderer.cpp',
    'isovist_renderer.cpp',
    'labeling_csp_player.cpp',
    'laser_object_renderer.cpp',
    'laser_scan_renderer.cpp',
    'lines_renderer.cpp',
    'local_area_event_renderer.cpp',
    'local_area_renderer.cpp',
    'object_boundary_renderer.cpp',
    'object_intention_renderer.cpp',
    'occupancy_grid_renderer.cpp',
    'open_gl_widget.cpp',
    'particles_renderer.cpp',
    'path_renderer.cpp',
    'place_grid_renderer.cpp',
    'place_view_topological_map_renderer.cpp',
    'pose_target_renderer.cpp',
    'pose_trace_renderer.cpp',
    'robot_renderer.cpp',
    'robot_trajectory_renderer.cpp',
    'rrt_renderer.cpp',
    'small_scale_star_renderer.cpp',
    'stable_area_renderer.cpp',
    'topological_graph_renderer.cpp',
    'topological_map_renderer.cpp',
    'topo_situation_renderer.cpp',
    'tracked_object_renderer.cpp',
    'visibility_graph_renderer.cpp',
    'voronoi_isovist_gradients_renderer.cpp',
]

ui_components_lib = static_library(
    'ui_components_lib',
    ui_components_src,
    include_directories : [ vulcan_inc ],
    link_with : [ exploration_data_lib, global_topo_func_lib, local_metric_data_lib, local_topo_data_lib, mpepc_func_lib, tracker_data_lib ],
    dependencies : [ ui_dep ]
)
