debug_ui_src = [
    'calibration_display_widget.cpp',
    'calibration_panel.cpp',
    'debug_ui_app.cpp',
    'debug_ui.cpp',
    'debug_ui_frame.cpp',
    'decision_planner_display_widget.cpp',
    'decision_planner_panel.cpp',
    'evaluation_display_widget.cpp',
    'evaluation_panel.cpp',
    'exploration_panel.cpp',
    'exploration_widget.cpp',
    'global_metric_display_widget.cpp',
    'global_metric_panel.cpp',
    'global_topo_display_widget.cpp',
    'global_topo_panel.cpp',
    'goal_planner_display_widget.cpp',
    'goal_planner_panel.cpp',
    'local_metric_display_widget.cpp',
    'local_metric_panel.cpp',
    'local_metric_panel_text_updater.cpp',
    'local_topo_display_widget.cpp',
    'local_topo_panel.cpp',
    'metric_planner_display_widget.cpp',
    'metric_planner_panel.cpp',
    'planner_scripting_widget.cpp',
    'relocalization_display_widget.cpp',
    'relocalization_panel.cpp',
    'scripting_panel.cpp',
    'system_panel.cpp',
    'tracker_display_widget.cpp',
    'tracker_panel.cpp',
    'vision_display_widget.cpp',
    'vision_panel.cpp',
]

debug_ui = executable(
    'debug_ui',
    debug_ui_src,
    include_directories : [ vulcan_inc ],
    link_with : [ lcm_lib, laser_calibration_lib, sensor_lib, system_lib, ui_common_lib, ui_components_lib ],
    dependencies : [ boost_dep, lcm_dep, thread_dep, ui_dep ],
    install : true,
)
